[metadata]
name = evogym
version = 1.0.0
author = Jagdeep Bhatia
author_email = jagdeep@mit.edu
description = Evolution Gym: A benchmark for developing and comparing soft robot co-design algorithms.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EvolutionGym
project_urls =
    Bug Tracker = https://github.com/EvolutionGym
    Docs = http://evogym.csail.mit.edu/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6